view controller 수정

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -7,7 +7,7 @@
 @import url(http://fonts.googleapis.com/css?family=Abel);
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family:'Hanna', serif;
   background:;
   position: relative;
   font-weight:400px;
@@ -35,7 +35,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Roboto', sans-serif;
+  
 }
 
 .btn:hover, 
@@ -78,7 +78,7 @@ a#scrollUp i{
 .contactinfo ul li a{
   font-size: 12px;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
 }
 
 
@@ -181,7 +181,7 @@ a#scrollUp i{
 .dropdown-menu  li  a:hover, .dropdown-menu  li  a:focus {
   background-color: #FE980F;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  
   text-decoration: none;
 }
 
@@ -200,7 +200,7 @@ a#scrollUp i{
 .shop-menu ul li a {
   background: #FFFFFF;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   font-weight: 300;
   padding:0;
@@ -240,7 +240,7 @@ a#scrollUp i{
 
 .mainmenu ul li a {
 	color: #696763;
-	font-family: 'Roboto', sans-serif;
+	
 	font-size: 17px;
 	font-weight: 300;
 	padding: 0;
@@ -256,7 +256,6 @@ a#scrollUp i{
   background: #F0F0E9;
   border: medium none;
   color: #B2B2B2;
-  font-family: 'roboto';
   font-size: 12px;
   font-weight: 300;
   height: 35px;
@@ -372,7 +371,7 @@ ul.sub-menu {
 
 .companyinfo p {
   color: #B3B3AD;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 12px;
   font-weight: 300;
 }
@@ -430,7 +429,7 @@ ul.sub-menu {
 
 .video-gallery p {
   color: #8C8C88;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 12px;
   font-weight: 500;
   margin-bottom:0px;
@@ -438,7 +437,6 @@ ul.sub-menu {
 
 .video-gallery  h2 {
   color: #8c8c88;
-  font-family: 'Roboto', sans-serif;
   font-size: 12px;
   font-weight: 300;
   text-transform:uppercase;
@@ -457,7 +455,7 @@ ul.sub-menu {
 
 .address p {
   color: #666663;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   font-weight: 300;
   left: 25px;
@@ -476,7 +474,7 @@ ul.sub-menu {
 
 .single-widget h2 {
   color: #666663;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 22px;
@@ -489,7 +487,7 @@ ul.sub-menu {
 
 .single-widget ul li a{
 	color: #8C8C88;
-	font-family: 'Roboto', sans-serif;
+	
 	font-size: 14px;
 	font-weight: 300;
 	padding: 5px 0;
@@ -508,7 +506,7 @@ ul.sub-menu {
 /* .searchform input {
   border: 1px solid #DDDDDD;
   color: #CCCCC6;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   margin-top: 0;
   outline: medium none;
@@ -538,7 +536,7 @@ ul.sub-menu {
 
 .searchform p {
   color: #8C8C88;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   font-weight: 300;
   margin-top: 25px;
@@ -551,7 +549,7 @@ ul.sub-menu {
 
 .footer-bottom p {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  
   font-weight: 300;
   margin-left: 15px;
 }
@@ -608,7 +606,7 @@ ul.sub-menu {
 
 .item h2 {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 22px;
@@ -619,7 +617,7 @@ ul.sub-menu {
 	color:#363432;
 	font-size:16px;
 	font-weight:300;
-	font-family: 'Roboto', sans-serif;
+	
 }
 
 .get {
@@ -627,7 +625,7 @@ ul.sub-menu {
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 16px;
   font-weight: 300;
   margin-top: 23px;
@@ -659,9 +657,12 @@ ul.sub-menu {
   padding-bottom: 20px;
   padding-top: 15px;
 }
+.left-sidebar a {
+	font-size:1.3em;
+}
 .left-sidebar h2, .brands_products h2 {
   color: #FE980F;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 18px;
   font-weight: 700;
   margin: 0 auto 30px;
@@ -723,7 +724,7 @@ h2.title:before{
 
 .category-products .panel-default .panel-heading .panel-title a {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   text-decoration: none;
   text-transform: uppercase;
@@ -755,7 +756,7 @@ h2.title:before{
 
 .panel-body ul li a {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 12px;
   text-transform: uppercase;
 }
@@ -770,7 +771,7 @@ h2.title:before{
 .brands-name .nav-stacked li a {
   background-color: #FFFFFF;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   padding: 5px 25px;
   text-decoration: none;
@@ -836,7 +837,7 @@ h2.title:before{
 
 h2.title {
   color: #FE980F;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 18px;
   font-weight: 700;
   margin: 0 15px;
@@ -854,6 +855,12 @@ h2.title {
 	width:200px;
 	height:300px;
 } 
+
+.single-products p {
+	margin-top: 18px;
+	font-size: 1.5em;
+}
+
 .single-products {
   position: relative;
 }
@@ -866,20 +873,20 @@ h2.title {
 
 .productinfo h2{
 	color: #FE980F;
-	font-family: 'Roboto', sans-serif;
+	
 	font-size: 24px;
 	font-weight: 700;
 }
 .product-overlay h2{
 	color: #fff;
-	font-family: 'Roboto', sans-serif;
+	
 	font-size: 24px;
 	font-weight: 700;
 }
 
 
 .productinfo p{
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   font-weight: 400;
   color: #696763;
@@ -924,7 +931,7 @@ h2.title {
   border: 0 none;
   border-radius: 0;
   color: #FE980F;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 15px;
   margin-bottom: 25px;
 }
@@ -936,7 +943,7 @@ h2.title {
 
 
 .product-overlay p{
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   font-weight: 400;
   color: #fff;
@@ -949,7 +956,7 @@ h2.title {
   border: 0 none;
   border-radius: 0;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 15px;
   margin-bottom: 25px;
 }
@@ -980,7 +987,7 @@ h2.title {
 
 .choose ul li a {
   color: #B3AFA8;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 13px;
   padding-left: 0;
   padding-right: 0;
@@ -1013,7 +1020,7 @@ h2.title {
   border-radius: 0;
   color: #B3AFA8;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   text-transform: uppercase;
 }
@@ -1055,9 +1062,6 @@ h2.title {
   position: absolute;
   top: 41%;
 }
-
-.carousel-inner p {font-family:'Hanna', serif;}
-.carousel-inner h2 {font-family:'Hanna', serif;}
 
 .recommended-item-control i {
   background: none repeat scroll 0 0 #FE980F;
@@ -1187,13 +1191,18 @@ h2.title {
   background: #FE980F;
   bottom: 0;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   font-weight: 700;
   margin-bottom: 0;
   padding: 8px 20px;
   position: absolute;
   right: 0;
+}
+.carousel-inner-header {
+	font-size:2.3em;
+	margin-top: 80px;	
+	margin-bottom: 40px;	
 }
 
 #similar-product .carousel-inner .item{
@@ -1238,14 +1247,14 @@ h2.title {
 
 .product-information h2 {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 20px;
   margin-top: 0;
 }
 
 .product-information p {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   margin-bottom: 5px;
 }
 
@@ -1258,7 +1267,7 @@ h2.title {
 .product-information span span {
   color: #FE980F;
   float: left;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 30px;
   font-weight: 700;
   margin-right: 20px;
@@ -1267,7 +1276,7 @@ h2.title {
 .product-information span input {
   border: 1px solid #DEDEDC;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 20px;
   font-weight: 700;
   height: 33px;
@@ -1278,7 +1287,7 @@ h2.title {
 
 .product-information span label {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   font-weight: 700;
   margin-right: 5px;
 }
@@ -1293,7 +1302,7 @@ h2.title {
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 15px;
   margin-bottom: 10px;
   margin-left: 20px;
@@ -1328,7 +1337,7 @@ h2.title {
 #reviews ul li a {
   color: #696763;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   padding-right: 15px;
 }
@@ -1355,7 +1364,7 @@ h2.title {
   background:#F0F0E9;
   border: 0 none;
   color: #A6A6A1;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   outline: medium none;
   padding: 8px;
@@ -1384,7 +1393,7 @@ h2.title {
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
 }
 
@@ -1399,7 +1408,7 @@ h2.title {
 
 .content-404 h1 {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 41px;
   font-weight: 300;
 }
@@ -1410,7 +1419,7 @@ h2.title {
 
 .content-404 p {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 18px;
 }
 
@@ -1421,7 +1430,7 @@ h2.title {
 .content-404 h2 a {
   background: #FE980F;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 44px;
   font-weight: 300;
   padding: 8px 40px;
@@ -1439,17 +1448,35 @@ h2.title {
   overflow: hidden;
 }
 
-.login-form {
-	
+.myPage-form-header {
+	text-align: center;
+	font-size: 1.8em;
+}
+.login-form #address{
+  background: #FE980F;
+  border: medium none;
+  border-radius: 0;
+  color: #FFFFFF;
+  display: block;
+  padding: 6px 25px;
+}
+.login-form #modify_user, #ok, #cancel{
+  background: #FE980F;
+  border: medium none;
+  border-radius: 0;
+  color: #FFFFFF;
+  display: block;
+  padding: 6px 25px;
 }
 
 .signup-form {
-
+	font-size: 1.5em;
+	margin-left: 30px;
+	margin-top: 84px;
 }
 
 .login-form h2, .signup-form h2 {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-weight: 300;
   margin-bottom: 30px;
@@ -1462,7 +1489,7 @@ h2.title {
   border: medium none;
   color: #696763;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 14px;
   font-weight: 300;
   height: 40px;
@@ -1489,13 +1516,21 @@ h2.title {
   width:100px;
 }
 
-.login-form form #btnLogin, .signup-form form button {
+#btnJoin {
   background: #FE980F;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  padding: 6px 25px;
+}
+
+.login-form form #btnLogin {
+  background: #FE980F;
+  border: medium none;
+  border-radius: 0;
+  color: #FFFFFF;
+  display: block;
   padding: 6px 25px;
 }
 
@@ -1518,11 +1553,12 @@ h2.title {
 	background: #FE980F;
 	border-radius: 40px;
 	color: #FFFFFF;
-	font-family: 'Roboto', sans-serif;
+	
 	font-size: 16px;
 	height: 50px;
 	line-height: 50px;
 	margin-top: 75px;
+	margin-left: 25px;
 	text-align: center;
 	width: 50px;
 }
@@ -1579,7 +1615,7 @@ h2.title {
   background: #FE980F;
   color: #fff;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  
   font-weight: normal;
 }
 
@@ -1613,7 +1649,6 @@ h2.title {
 
 #cart_items .cart_info .cart_description h4 a {
   color: #363432;
-  font-family: 'Roboto',sans-serif;
   font-size: 20px;
   font-weight: normal;
 
@@ -1658,7 +1693,6 @@ h2.title {
   float: left;
   font-size: 16px;
   text-align: center;
-  font-family: 'Roboto',sans-serif;
   
 }
 
@@ -1691,7 +1725,7 @@ h2.title {
 .heading h3 {
   color: #363432;
   font-size: 20px;
-  font-family: 'Roboto', sans-serif;
+  
 }
 
 .heading p {
@@ -1814,7 +1848,7 @@ h2.title {
   font-size: 20px;
   margin-bottom: 35px;
   padding: 10px 25px;
-  font-family: 'Roboto', sans-serif;
+  
 }
 
 .checkout-options {
@@ -1827,7 +1861,7 @@ h2.title {
   font-size: 20px;
   margin-bottom: 0;
   font-weight: normal;
-  font-family: 'Roboto', sans-serif;
+  
 }
 
 .checkout-options p {
@@ -1841,7 +1875,7 @@ h2.title {
   margin-right: 45px;
   color: #696763;
   font-size: 18px;
-  font-family: 'Roboto', sans-serif;
+  
   font-weight: normal;
 }
 
@@ -1940,7 +1974,7 @@ h2.title {
 .order-message label {
   font-weight:300;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  
   margin-left: 10px;
   font-size: 14px
 }
@@ -2004,7 +2038,6 @@ h2.title {
 .single-blog-post h3 {
   color: #696763;
   font-size: 16px;
-  font-family: 'Roboto',sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   margin-bottom: 17px;
@@ -2233,7 +2266,7 @@ h2.title {
   color: #363432;
   font-size: 14px;
   font-weight: 700;
-  font-family: 'Roboto', sans-serif;
+  
   margin-bottom: 15px
 }
 
