searcjPw.jsp 수정 및 지점 선택 추가

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1542,6 +1542,15 @@ h2.title {
   padding: 6px 25px;
 }
 
+.login-form form #btnFindPw {
+  background: #93B658;
+  border: medium none;
+  border-radius: 0;
+  color: #FFFFFF;
+  display: block;
+  padding: 6px 25px;
+}
+
 .login-form label{
 
 }
