--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -5,7 +5,9 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700);
 @import url(http://fonts.googleapis.com/css?family=Abel);
-
+.logo{
+	width:230px;
+}
 body {
   font-family:'Hanna', serif;
   background:;
@@ -52,7 +54,7 @@ a#scrollUp {
   bottom: 0px;
   right: 10px;
   padding: 5px 10px;
-  background: #FE980F;
+  background: #93B658;
   color: #FFF;
   -webkit-animation: bounce 2s ease infinite;
   animation: bounce 2s ease infinite;
@@ -162,13 +164,13 @@ a#scrollUp i{
 }
 
 .usa:hover {
-	background:#FE980F;
+	background:#93B658;
 	color:#fff;
-	border-color:#FE980F;
+	border-color:#93B658;
 }
 
 .usa:active, .usa.active {
-  background: none repeat scroll 0 0 #FE980F;
+  background: none repeat scroll 0 0 #93B658;
   box-shadow: inherit;
   outline: 0 none;
 }
@@ -179,7 +181,7 @@ a#scrollUp i{
 }
 
 .dropdown-menu  li  a:hover, .dropdown-menu  li  a:focus {
-  background-color: #FE980F;
+  background-color: #93B658;
   color: #FFFFFF;
   
   text-decoration: none;
@@ -215,7 +217,7 @@ a#scrollUp i{
 
 
 .shop-menu ul li a:hover {
-	color:#fe980f;
+	color:#93B658;
 	background:#fff;
 }
 
@@ -366,7 +368,7 @@ ul.sub-menu {
 }
 
 .companyinfo h2  span{
-  color:#FE980F;
+  color:#93B658;
 }
 
 .companyinfo p {
@@ -404,7 +406,7 @@ ul.sub-menu {
   top: 0;
   width: 100%;
   height: 61px;
-  background: #FE980F;
+  background: #93B658;
   border-radius: 3px;
   color: #FFF;
   font-size: 20px;
@@ -499,7 +501,7 @@ ul.sub-menu {
 
 .single-widget ul li a:hover{
 	background:none;
-	color:#FE980F;
+	color:#93B658;
 }
 
 
@@ -516,7 +518,7 @@ ul.sub-menu {
 
 
 .searchform button {
-  background: #FE980F;
+  background: #93B658;
   border: medium none;
   border-radius: 0;
   margin-left: -5px;
@@ -531,7 +533,7 @@ ul.sub-menu {
 
 .searchform  button:hover, 
 .searchform  button:focus{
-	background-color:#FE980F;
+	background-color:#93B658;
 }
 
 .searchform p {
@@ -555,7 +557,7 @@ ul.sub-menu {
 }
 
 .footer-bottom p span a {
-  color: #FE980F;
+  color: #93B658;
   font-style: italic;
   text-decoration: underline;
 }
@@ -575,7 +577,7 @@ ul.sub-menu {
 }
 
 .carousel-indicators li.active {
-	  background: #FE980F;
+	  background: #93B658;
 }
 
 .item {
@@ -601,7 +603,7 @@ ul.sub-menu {
 }
 
 .item h1 span {
-	color:#FE980F;
+	color:#93B658;
 }
 
 .item h2 {
@@ -621,7 +623,7 @@ ul.sub-menu {
 }
 
 .get {
-  background: #FE980F;
+  background: #93B658;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -633,7 +635,7 @@ ul.sub-menu {
 
 
 .item button:hover {
-  background: #FE980F;
+  background: #93B658;
 }
 
 .control-carousel {
@@ -644,7 +646,7 @@ ul.sub-menu {
 }
 
 .control-carousel:hover{
-  color: #FE980F ;
+  color: #93B658 ;
 }
 
 .right {
@@ -661,7 +663,7 @@ ul.sub-menu {
 	font-size:1.3em;
 }
 .left-sidebar h2, .brands_products h2 {
-  color: #FE980F;
+  color: #93B658;
   
   font-size: 18px;
   font-weight: 700;
@@ -808,7 +810,7 @@ h2.title:before{
 
 
 .tooltip-inner {
-  background-color: #FE980F;
+  background-color: #93B658;
   border-radius: 4px;
   color: #FFFFFF;
   max-width: 200px;
@@ -818,7 +820,7 @@ h2.title:before{
 }
 
 .tooltip.top .tooltip-arrow {
-  border-top-color: #FE980F;
+  border-top-color: #93B658;
   border-width: 5px 5px 0;
   bottom: 0;
   left: 50%;
@@ -836,7 +838,7 @@ h2.title:before{
 
 
 h2.title {
-  color: #FE980F;
+  color: #93B658;
   
   font-size: 18px;
   font-weight: 700;
@@ -872,7 +874,7 @@ h2.title {
 }
 
 .productinfo h2{
-	color: #FE980F;
+	color: #93B658;
 	
 	font-size: 24px;
 	font-weight: 700;
@@ -901,7 +903,7 @@ h2.title {
 }
 
 .product-overlay {
-  background:#FE980F;
+  background:#93B658;
   top: 0;
   display: none;
   height: 0;
@@ -930,15 +932,14 @@ h2.title {
   background:#fff;
   border: 0 none;
   border-radius: 0;
-  color: #FE980F;
-  
+  color: #93B658;
   font-size: 15px;
   margin-bottom: 25px;
 }
 
 .product-overlay .add-to-cart:hover {
   background:#fff;
-  color: #FE980F;
+  color: #93B658;
 }
 
 
@@ -962,7 +963,7 @@ h2.title {
 }
 
 .add-to-cart:hover {
-  background: #FE980F;
+  background: #93B658;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -977,7 +978,7 @@ h2.title {
 }
 
 .add-to-cart:hover {
-  background: #FE980F;
+  background: #93B658;
   color: #FFFFFF;
 }
 
@@ -999,7 +1000,7 @@ h2.title {
 
 .choose ul li a:hover{
 	background:none;
-	color:#FE980F;
+	color:#93B658;
 }
 
 .category-tab {
@@ -1008,7 +1009,7 @@ h2.title {
 
 .category-tab ul {
   background: #40403E;
-  border-bottom: 1px solid #FE980F;
+  border-bottom: 1px solid #93B658;
   list-style: none outside none;
   margin: 0 0 30px;
   padding: 0;
@@ -1026,7 +1027,7 @@ h2.title {
 }
 
 .category-tab ul  li  a:hover{
-	background:#FE980F;
+	background:#93B658;
 	color:#fff;
 }
 
@@ -1035,7 +1036,7 @@ h2.title {
   -moz-border-left-colors: none;
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
-  background-color: #FE980F;
+  background-color: #93B658;
   border:0px;
   color: #FFFFFF;
   cursor: default;
@@ -1064,7 +1065,7 @@ h2.title {
 }
 
 .recommended-item-control i {
-  background: none repeat scroll 0 0 #FE980F;
+  background: none repeat scroll 0 0 #93B658;
   color: #FFFFFF;
   font-size: 20px;
   padding: 4px 10px;
@@ -1123,8 +1124,8 @@ h2.title {
 }
 
 .pagination  .active  a, .pagination  .active  span, .pagination  .active  a:hover, .pagination  .active  span:hover, .pagination  .active  a:focus, .pagination  .active  span:focus {
-  background-color: #FE980F;
-  border-color: #FE980F;
+  background-color: #93B658;
+  border-color: #93B658;
   color: #FFFFFF;
   cursor: default;
   z-index: 2;
@@ -1144,7 +1145,7 @@ h2.title {
 }
 
 .pagination  li  a:hover{
-	background:#FE980F;
+	background:#93B658;
 	color:#fff;
 }
 
@@ -1188,7 +1189,7 @@ h2.title {
 }
 
 .view-product h3 {
-  background: #FE980F;
+  background: #93B658;
   bottom: 0;
   color: #FFFFFF;
   
@@ -1220,7 +1221,7 @@ h2.title {
   top: 35%;
 }
 .item-control i {
-  background: #FE980F;
+  background: #93B658;
   color: #FFFFFF;
   font-size: 20px;
   padding: 5px 10px;
@@ -1265,7 +1266,7 @@ h2.title {
 }
 
 .product-information span span {
-  color: #FE980F;
+  color: #93B658;
   float: left;
   
   font-size: 30px;
@@ -1298,7 +1299,7 @@ h2.title {
 
 
 .cart {
-  background: #FE980F;
+  background: #93B658;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1310,7 +1311,6 @@ h2.title {
 
 
 .shop-details-tab {
-  border: 1px solid #F7F7F0;
   margin-bottom: 75px;
   margin-left: 15px;
   margin-right: 15px;
@@ -1343,13 +1343,13 @@ h2.title {
 }
 
 #reviews ul li a i{
-	color:#FE980F;
+	color:#93B658;
 	padding-right:8px;
 }
 
 #reviews ul li a:hover{
 	background:#fff;
-	color:#FE980F;
+	color:#93B658;
 }
 
 #reviews p{
@@ -1389,7 +1389,7 @@ h2.title {
 }
 
 #reviews button {
-  background: #FE980F;
+  background: #93B658;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1428,7 +1428,7 @@ h2.title {
 }
 
 .content-404 h2 a {
-  background: #FE980F;
+  background: #93B658;
   color: #FFFFFF;
   
   font-size: 44px;
@@ -1449,11 +1449,12 @@ h2.title {
 }
 
 .myPage-form-header {
-	text-align: center;
+	width: 100%;
+	margin:0 auto;
 	font-size: 1.8em;
 }
 .login-form #address{
-  background: #FE980F;
+  background: #93B658;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1461,14 +1462,21 @@ h2.title {
   padding: 6px 25px;
 }
 .login-form #modify_user, #ok, #cancel{
-  background: #FE980F;
+  background: #93B658;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
   display: block;
   padding: 6px 25px;
 }
-
+.cartBtn {
+  background: #93B658;
+  border: medium none;
+  border-radius: 0;
+  color: #FFFFFF;
+  display: block;
+  padding: 6px 25px;
+}
 .signup-form {
 	font-size: 1.5em;
 	margin-left: 30px;
@@ -1517,7 +1525,7 @@ h2.title {
 }
 
 #btnJoin {
-  background: #FE980F;
+  background: #93B658;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1526,7 +1534,16 @@ h2.title {
 }
 
 .login-form form #btnLogin {
-  background: #FE980F;
+  background: #93B658;
+  border: medium none;
+  border-radius: 0;
+  color: #FFFFFF;
+  display: block;
+  padding: 6px 25px;
+}
+
+.login-form form #btnFindPw {
+  background: #93B658;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1550,7 +1567,7 @@ h2.title {
 
 
 .or{
-	background: #FE980F;
+	background: #93B658;
 	border-radius: 40px;
 	color: #FFFFFF;
 	
@@ -1583,7 +1600,7 @@ h2.title {
 }
 
 .breadcrumbs .breadcrumb li a {
-  background:#FE980F;
+  background:#93B658;
   color: #FFFFFF;
   padding: 3px 7px;
 }
@@ -1594,7 +1611,7 @@ h2.title {
   width: auto;
   border-width: 8px;
   border-style: solid;
-  border-color:transparent transparent transparent #FE980F;
+  border-color:transparent transparent transparent #93B658;
   position: absolute;
   top: 11px;
   left:48px;
@@ -1604,6 +1621,9 @@ h2.title {
 .breadcrumbs .breadcrumb > li + li:before {
   content: " ";
 }
+#cart_items {
+	margin-top:50px;
+}
 
 #cart_items .cart_info {
   border: 1px solid #E6E4DF;
@@ -1612,7 +1632,7 @@ h2.title {
 
 
 #cart_items .cart_info .cart_menu {
-  background: #FE980F;
+  background: #93B658;
   color: #fff;
   font-size: 16px;
   
@@ -1666,7 +1686,7 @@ h2.title {
 
 
 #cart_items .cart_info .cart_total_price {
-  color: #FE980F;
+  color: #93B658;
   font-size: 24px;
 }
 
@@ -1687,13 +1707,8 @@ h2.title {
   float: left;
 }
 
-
-.cart_quantity_input {
-  color: #696763;
-  float: left;
-  font-size: 16px;
-  text-align: center;
-  
+.cart_quantity p{
+  font-size: 18px;
 }
 
 
@@ -1705,14 +1720,14 @@ h2.title {
 
 
 .cart_delete a {
-  background:#F0F0E9;
+  background:#67dc91;
   color: #FFFFFF;
   padding: 5px 7px;
   font-size: 16px
 }
 
 .cart_delete a:hover {
-  background:#FE980F
+  background:#93B658
 }
 
 
@@ -1817,7 +1832,7 @@ h2.title {
 }
 
 .update, .check_out {
-  background: #FE980F;
+  background: #93B658;
   border-radius: 0;
   color: #FFFFFF;
   margin-top: 18px;
@@ -1884,7 +1899,7 @@ h2.title {
 }
 
 .checkout-options .nav li a {
-  color: #FE980F;
+  color: #93B658;
   font-size: 18px;
   font-weight: normal;
   padding: 0
@@ -1898,7 +1913,7 @@ h2.title {
   margin-right: 10px;
   border-radius: 50%;
   padding: 5px;
-  background: #FE980F;
+  background: #93B658;
   color:#fff;
   font-size: 14px;
   padding: 2px 3px;
@@ -1929,7 +1944,7 @@ h2.title {
 
 
 .shopper-info .btn-primary {
-  background: #FE980F;
+  background: #93B658;
   border: 0 none;
   border-radius: 0;
   margin-right: 15px;
@@ -2014,7 +2029,7 @@ h2.title {
 
 #cart_items .cart_info 
 .table.table-condensed.total-result span {
-  color: #FE980F;
+  color: #93B658;
   font-weight: 700;
   font-size: 16px
 }
@@ -2084,7 +2099,7 @@ h2.title {
 
 .blog-post-area 
 .post-meta ul li i {
-  background:#FE980F;
+  background:#93B658;
   color: #FFFFFF;
   margin-left: -4px;
   margin-right: 7px;
@@ -2098,7 +2113,7 @@ h2.title {
   position: absolute;
   width: auto;
   height: auto;
-  border-color:transparent transparent transparent #FE980F;
+  border-color:transparent transparent transparent #93B658;
   border-width:4px;
   border-style: solid;
   top:6px;
@@ -2108,7 +2123,7 @@ h2.title {
 .blog-post-area 
 .post-meta ul span {
   float: right;
-  color: #FE980F
+  color: #93B658
 }
 
 .post-meta span{
@@ -2116,14 +2131,14 @@ h2.title {
 }
 
 .post-meta span i{
-  color: #FE980F
+  color: #93B658
 }
 
 
 .blog-post-area  
 .single-blog-post 
 .btn-primary {
-  background:#FE980F;
+  background:#93B658;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
@@ -2150,7 +2165,7 @@ h2.title {
 .pagination li a:hover,
 .pagination-area 
 .pagination li .active {
-  background:#FE980F;
+  background:#93B658;
   color: #fff
 }
 
@@ -2178,7 +2193,7 @@ h2.title {
 
 .pager-area 
 .pager li a:hover {
-  background: #FE980F;
+  background: #93B658;
   color: #fff
 }
 
@@ -2216,7 +2231,7 @@ h2.title {
 .rating-area 
 .ratings .color, 
 .rating-area .color {
-  color: #FE980F
+  color: #93B658
 }
 
 
@@ -2305,7 +2320,7 @@ h2.title {
 
 .blog-socials ul li a:hover {
   color: #fff;
-  background:#FE980F
+  background:#93B658
 }
 
 
@@ -2369,7 +2384,7 @@ h2.title {
 }
 
 .sinlge-post-meta li i {
-  background:#FE980F;
+  background:#93B658;
   color: #FFFFFF;
   margin-right: 10px;
   padding: 8px 10px;
@@ -2396,7 +2411,7 @@ h2.title {
 }
 
 .replay-box label {
-  background:#FE980F;
+  background:#93B658;
   color: #FFFFFF;
   margin-bottom: 15px;
   padding: 3px 15px;
@@ -2405,7 +2420,7 @@ h2.title {
 }
 
 .replay-box span {
-  color: #FE980F;
+  color: #93B658;
   float: right;
   font-weight: 700;
   margin-top: 21px;
@@ -2422,7 +2437,7 @@ h2.title {
 
 .replay-box form input:hover, 
 .text-area textarea:hover {
-  border: 1px solid #FE980F;
+  border: 1px solid #93B658;
 }
 
 .text-area {
@@ -2435,7 +2450,7 @@ h2.title {
 }
 
 .btn.btn-primary {
-  background:#FE980F;
+  background:#93B658;
   border: 0 none;
   border-radius: 0;
   margin-top: 16px;
@@ -2452,7 +2467,7 @@ h2.title {
   height: auto;
   border-style: solid;
   border-width: 8px;
-  border-color:#FE980F transparent transparent transparent;
+  border-color:#93B658 transparent transparent transparent;
   top: 25px;
   left: 5px
 } 
@@ -2560,7 +2575,42 @@ h2.title {
 }
 
 .contact-info .social-networks ul li a:hover{
-  color: #FE980F;
+  color: #93B658;
+}
+.cart_total {
+	margin-left: 78%;
+	margin-top: -50px;
+}
+.cart_total_payment {
+	margin-left: 36px;
+	font-size: 1.5em;
 }
 
+table.type09 {
+    border-collapse: collapse;
+    text-align: left;
+    line-height: 1.5;
 
+}
+table.type09 thead th {
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    color: #369;
+    border-bottom: 3px solid #036;
+    border-top: 3px solid #036;
+}
+table.type09 tbody th {
+    width: 150px;
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+    background: #f3f6f7;
+}
+table.type09 td {
+    width: 350px;
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+}
